# emb1

./: .clang-format  .gitignore  .gitmodules  .pylintrc  LICENSE.md  Makefile  PROTOCOL.md  README.md  conftest.py  emb1-dev-prepare.sh  emb1.sublime-project  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  requirements.txt  run-pylint  start-openocd
.obsidian/: app.json  community-plugins.json  hotkeys.json
3party/: README.md  freertos-kernel-1051.mk
app/riga-comm-00/: app.cpp  app.h  io.h  main.cpp  mcu-init.cpp  nvic.cpp  riga-comm-00.ld  riga-comm-00.mk  tick.cpp  usart.h
app/stm32f0-arithmetic-renode/: .gitignore  ibasic.cpp  ibasic.h  imult.cpp  imult.h  main.cpp  nvic.cpp  stm32f0-arithmetic-renode.gnu-arm-none-eabi-14.3.resc  (+8 more)
app/stm32h743_zephyr_sbx/: CMakeLists.txt  STM32H743-ZEPHYR-SBX.md  flash-write.sh  prj-build-flash.sh  prj.conf  project-build.sh  sample.yaml
app/stm32h743_zephyr_sbx/integration-tests/: build.py  protocol.py  protocol_memory.py  protocol_random.py
app/stm32h743_zephyr_sbx/src/: error.cpp  main.cpp  protocol.cpp  protocol.h
boards/: BOARDS.md  common.openocd.cfg  riga.openocd.cfg  rijeka.on-the-fly.openocd.cfg  rijeka.openocd.sh  rijeka.reset.openocd.cfg  rimini.openocd.cfg
common/: linker.h  utility.h
docs/: CODE-STRUCTURE.md  HOST-TESTS.md  INTEGRATION-TESTS.md  PROTOCOL.md  USART.md
host-tests/: error.cpp  host-tests.mk  main.cpp  test_host_tests.py
host_tests/: dio_tests.cpp  host-tests.mk  mmreg_tests.cpp  test_host_tests.py
if/: error.h
integration_tests/: build.py  serial_port.py  sport.py
libc/: string.cpp  stubs.cpp
renode/: __init__.py  stm32f0.repl
scripts/: app_local_stm32h743.py  app_script_stm32h743.py  app_script_stm32h743.py_  app_static_stm32f051.py  app_static_stm32h743.py  app_swo.py  flash_write_openocd.py  read_flash  riga_static_reader.py
tools/: formatter_cpp.py
(+184 files in other folders)
