[project]
name = "emb1"
dependencies = [
	"pyelftools == 0.32",
]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/options.html

line_length = 100
wrap_length = 100

# "multi_line_output" defines how from imports wrap
# when they extend past the line_length limit.
# https://pycqa.github.io/isort/docs/configuration/multi_line_output_modes.html
# 7 = don't wrap
# multi_line_output = 7
force_single_line = "True"

#
# PYTEST configuration
#
[tool.pytest.ini_options]
# Last tested with pytest 7.1.3.

addopts = "--import-mode=importlib --ignore=3party"

# importlib import mode is recommended for new projects as it allows having test modules
# with same basenames. However, "." should be added to pythonpath to allow importing
# utility modules used by test modules.
pythonpath = "."

# Having pytest look in all python files instead of "test_*.py" only.
python_files = "*.py"

# Run-time logging settings.
log_cli = "True"
log_cli_level = "INFO"
log_cli_date_format = "%H:%M:%S"
log_cli_format = "%(asctime)s.%(msecs)03d %(levelname)s %(name)s: %(message)s"

# Registering custom markers.
markers = [
	"pctest: Mark a test as a test requiring only the PC to run and no target is needed.",
	"riga_comm_00: Mark a test as requiring a Riga board connected."
]
